--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -7,6 +8,7 @@ body
     margin: 0;
     padding: 0;
 }
+
 
 #cabecera
 {
@@ -16,6 +18,11 @@ body
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -40,5 +47,6 @@ body
 }
 #post
 {
+    background: white;
     padding: 1em;
 }
